fix aligned of logo elements

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -87,6 +87,8 @@ header {
 
 .logo {
   display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 1rem;
 
   & img {
